
  * Mounting with the local and sftp backends is now significantly
    faster, because the object tree is no longer traversed completely.
    
  * Fixed a race condition that occasionally produced errors when
    deleting large files (spanning multiple blocks).
  
  * The file system now stays responsive to other requests while
    compressing blocks.

  
2010-07-25, S3QL 0.19

  * Fixed various smaller bugs, see Mercurial changelog for 
    details.

2010-07-11, S3QL 0.18

  * Added --strip-meta option to mount.s3ql

  * Added --metadata-upload-interval option to mount.s3ql. This allows 
    to periodically upload updated metadata even while the file system
    is mounted.

  * stat.s3ql, tune.s3ql and cp.s3ql have been renamed to
    s3qlstat, s3qladm and s3qlcp respectively.

  * sftp backend is working again

  * Added the s3qlctrl command.

2010-06-29, S3QL 0.17

  * The local and sftp backends now spread their files into different 
    sub-directories.
     
  * Amazon S3 Reduced Redundancy Storage (RRS) is now supported. To
    use it, use a storage url of the form s3rr://<bucket> instead of
    s3://<bucket>.

2010-06-15, S3QL 0.16

  * Fixed problem with readdir() returning entries twice or skipping
    them if files are added or removed while readdir() is in progress.

  * Fixed build problem on Gentoo.

  * fsck.s3ql now does a rudimentary check if the file system is still
    mounted to prevent checking a mounted file system.


2010-05-28, S3QL 0.15

  * Fixed test cases to handle systems with low system clock resolution.

  * Corrected installation instructions for Debian

  * mount.s3ql: instead of --bzip2, --zlib and --no-compress, there
    is now just one option --compress=<alg>.

  * File system metadata is now uploaded with all indices. This
    makes mounting the file system much faster. Only if LZMA
    compression has been chosen, indices are stripped for storage and
    regenerated on the next mount.

2010-05-14, S3QL 0.14
