@@ -239,12 +239,45 @@ def upgrade(conn, bucket):
              CURRENT_FS_REV)
     param['revision'] = CURRENT_FS_REV
     
-    # Update local backend directory structure
+    # Update backend directory structure
     if isinstance(bucket, local.Bucket): 
         os.rename('%s/s3ql_data' % bucket.name, '%s/s3ql_data_' % bucket.name)
     elif isinstance(bucket, sftp.Bucket):
         bucket.conn.sftp.rename('%s/s3ql_data' % bucket.name, '%s/s3ql_data_' % bucket.name)
 
+    # Add compr_size column
+    if param['DB-Format'] == 'sqlite':
+        dbcm.execute('ALTER TABLE objects ADD COLUMN compr_size INT')
+    
+    # Add missing values for compr_size
+    log.info('Requesting all object sizes, this may take some time...')
+    if isinstance(bucket, (local.Bucket, sftp.Bucket)):
+        if isinstance(bucket, local.Bucket):
+            get_size = os.path.getsize
+        elif isinstance(bucket, sftp.Bucket):
+            get_size = lambda p: bucket.conn.sftp.lstat(p).st_size
+        
+        with dbcm.write_lock() as conn:
+            for (no, (obj_id,)) in enumerate(conn.query('SELECT id FROM objects')):
+                if no != 0 and no % 5000 == 0:
+                    log.info('Checked %d objects so far..', no)
+                
+                path = bucket._key_to_path('s3ql_data_%d' % obj_id) + '.dat'
+                conn.execute('UPDATE objects SET compr_size=? WHERE id=?',
+                             (get_size(path), obj_id))
+                                  
+    elif isinstance(bucket, s3.Bucket):
+        with dbcm.write_lock() as conn:
+            with bucket._get_boto() as boto:
+                for bkey in boto.list('s3ql_data_'):
+                    obj_id = int(bkey.name[10:])
+                    conn.execute('UPDATE objects SET compr_size=? WHERE id=?',
+                                 (bkey.size, obj_id))
+                    
+                if conn.has_val('SELECT 1 FROM objects WHERE compr_size IS NULL'):
+                    log.warn('Could not determine sizes for all S3 objects, '
+                             's3qlstat output will be incorrect.')
+    
     # Increase metadata sequence no
     param['seq_no'] += 1
     bucket.store('s3ql_seq_no_%d' % param['seq_no'], 'Empty')
