@@ -74,25 +74,29 @@ def main(args=None):
             and os.path.exists(ctrlfile)):
         raise QuietError('%s is not a mount point' % mountpoint)
 
-    log.info('Gathering statistics (this may take a while)...')
     # Use a decent sized buffer, otherwise the statistics have to be
     # calculated thee(!) times because we need to invoce getxattr
     # three times.
     buf = libc.getxattr(ctrlfile, b's3qlstat', size_guess=256)
 
-    (entries, blocks, inodes, size_1, size_2,
-     size_3, dbsize) = struct.unpack('QQQQQQQ', buf)
-    print ('Directory entries:    %d\n'
-           'Inodes:               %d\n'
-           'Data blocks:          %d\n'
-           'Total data size:      %.2f MB\n'
-           'After de-duplication: %.2f MB (%.2f%% of total)\n'
-           'After compression:    %.2f MB (%.2f%% of total, %.2f%% of de-duplicated)\n'
-           'Database size:        %.2f MB'
-            % (entries, inodes, blocks, size_1 / 1024 ** 2, size_2 / 1024 ** 2, size_2 / size_1 * 100,
-               size_3 / 1024 ** 2, size_3 / size_1 * 100, size_3 / size_2 * 100, dbsize / 1024 ** 2))
-
-
+    (entries, blocks, inodes, fs_size, dedup_size,
+     compr_size, db_size) = struct.unpack('QQQQQQQ', buf)
+    p_dedup = dedup_size * 100 / fs_size if fs_size else 0
+    p_compr_1 = compr_size * 100 / fs_size if fs_size else 0
+    p_compr_2 = compr_size * 100 / dedup_size if dedup_size else 0
+    mb= 1024**2
+    print ('Directory entries:    %d' % entries,
+           'Inodes:               %d' % inodes, 
+           'Data blocks:          %d' % blocks,
+           'Total data size:      %.2f MB' % (fs_size/mb),
+           'After de-duplication: %.2f MB (%.2f%% of total)' 
+             % (dedup_size / mb, p_dedup),
+           'After compression:    %.2f MB (%.2f%% of total, %.2f%% of de-duplicated)'
+             % (compr_size /mb, p_compr_1, p_compr_2),
+           'Database size:        %.2f MB (uncompressed)' % (db_size / mb),
+           '(some values do not take into account not-yet-uploaded dirty blocks in cache)', 
+           sep='\n')
+    
 
 if __name__ == '__main__':
     main(sys.argv[1:])
